--- a/RAGTutorial.ipynb
+++ b/RAGTutorial.ipynb
@@ -141,7 +141,7 @@
         "!pip install huggingface_hub\n",
         "from huggingface_hub import login\n",
         "\n",
-        "hf_token = \"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\"\n",
+        "hf_token = \"<insert_your_token_here>"\n",
         "login(token=hf_token, add_to_git_credential=True)"
       ],
       "metadata": {
