Minor fixes to the tutorials to run on lambda0

--- a/tutorials/02-basic-prompt-engineering/Tutorial_02_Prompt_Engineering.ipynb
+++ b/tutorials/02-basic-prompt-engineering/Tutorial_02_Prompt_Engineering.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/argonne-lcf/llm-workshop/blob/main/tutorials/02-basic-prompt-engineering/Tutorial_02_Prompt_Engineering.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "ogvLVu_Wcg6h"
       },
@@ -49,23 +49,29 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "import os\n",
-        "from getpass import getpass\n",
-        "os.environ['HUGGINGFACEHUB_API_TOKEN'] = getpass('Enter huggingfacehub api token: ')"
-      ],
+      "execution_count": 2,
       "metadata": {
         "id": "xiMizy7dvvpJ"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "\n",
+        "with open('/homes/ac.rzenka/llm/.token', 'r') as file:\n",
+        "    os.environ['HUGGINGFACEHUB_API_TOKEN'] = file.read().replace('\\n', '')\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {
+        "id": "zf9ZxWldF4ic"
+      },
+      "outputs": [],
       "source": [
         "# modifies this notebook so output text wraps.\n",
         "from IPython.display import HTML, display\n",
-        "def set_css():\n",
+        "def set_css(info=None):\n",
         "  display(HTML('''\n",
         "  <style>\n",
         "    pre {\n",
@@ -74,16 +80,11 @@
         "  </style>\n",
         "  '''))\n",
         "get_ipython().events.register('pre_run_cell', set_css)"
-      ],
-      "metadata": {
-        "id": "zf9ZxWldF4ic"
-      },
-      "execution_count": 3,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "FbWZKpdodKDg"
       },
@@ -108,6 +109,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {
+        "id": "qjREtHGKwAzG"
+      },
+      "outputs": [],
       "source": [
         "# load remote model\n",
         "from langchain.llms import HuggingFaceHub\n",
@@ -117,31 +123,22 @@
         "    model_kwargs={\"temperature\": 0.5,\n",
         "                  \"max_length\": 128},\n",
         ")"
-      ],
-      "metadata": {
-        "id": "qjREtHGKwAzG"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 16,
       "metadata": {
-        "id": "Zio2WiZB_lWs",
-        "outputId": "5ca703d2-1c9d-4108-bc1b-148168342b7e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 38
-        }
+        },
+        "id": "Zio2WiZB_lWs",
+        "outputId": "5ca703d2-1c9d-4108-bc1b-148168342b7e"
       },
       "outputs": [
         {
-          "output_type": "display_data",
           "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
             "text/html": [
               "\n",
               "  <style>\n",
@@ -150,13 +147,17 @@
               "    }\n",
               "  </style>\n",
               "  "
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         }
       ],
       "source": [
-        "def get_completion_falcon(input, host=\"remote\", **kwargs):\n",
+        "def get_completion_falcon(input, host=\"local\", **kwargs):\n",
         "    prompt = f\"#### User: \\n{input}\\n\\n#### Response from falcon-7b-instruct:\"\n",
         "    response = \"\"\n",
         "    # print(prompt)\n",
@@ -209,10 +210,10 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
       "metadata": {
         "id": "yU9XkWcT1leP"
-      }
+      },
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -233,7 +234,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "rdrOu5FfdKl9"
       },
@@ -263,7 +264,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "id": "hLZmpnLu9h0p"
       },
@@ -295,41 +296,41 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "IwnSmX1-9iL_"
       },
       "outputs": [],
       "source": [
-        "in_context_prompt =  \"John went to the orchard to pick apples.He filled his basket and returned home. Once home, he realized he also wanted oranges. Question: What is John likely to do next?\"\n",
+        "in_context_prompt =  \"John went to the orchard to pick apples. He filled his basket and returned home. Once home, he realized he also wanted oranges. This happened in Minnesota, cold state without oranges growing in orchards. Question: What is John likely to do next?\"\n",
         "response_in_context = get_completion_falcon(in_context_prompt)\n",
         "print(response_in_context)"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 15,
+      "metadata": {
+        "id": "1b6Lb2NvTqby"
+      },
+      "outputs": [],
       "source": [
         "# Exercise: Write a discrete prompt\n",
         "prompt =  \"\"\n",
         "response = get_completion_falcon(prompt)\n",
         "print(response)"
-      ],
-      "metadata": {
-        "id": "1b6Lb2NvTqby"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Exercise: Write a soft prompt\n"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "oB9nJasPTwoI"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Exercise: Write a soft prompt\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -349,7 +350,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "id": "pNGEzrkn9h_0"
       },
@@ -362,15 +363,15 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Exercise: Improve the few-shot learning prompt above.\n",
-        "\n"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "jBNTc_F5UTeL"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Exercise: Improve the few-shot learning prompt above.\n",
+        "\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -515,18 +516,18 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "rYHE-ea-UoYS"
+      },
+      "outputs": [],
       "source": [
         "# Exercise: Try writing a prompt that summarizes a key concept in your area of\n",
         "# expertise. Start with a general question, like what is the central dogma in\n",
         "# biology, or what is the origin of the milky way. Then, try making it clearer\n",
         "# and more specific.\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "rYHE-ea-UoYS"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -626,25 +627,25 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Exercises:"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "hcnA8y0FVyVp"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Exercises:"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Exercises:"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "XUIi846sVt_S"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Exercises:"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -769,7 +770,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "id": "AYcuWJWuvXWJ"
       },
@@ -855,7 +856,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "id": "yp4TOFGyFuPt"
       },
@@ -870,7 +871,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "id": "i41yCAN3OTy8"
       },
@@ -951,14 +952,14 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Exercise: Try your own attempt at iterative prompting.\n"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "8_JfImPDWIeI"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Exercise: Try your own attempt at iterative prompting.\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1145,7 +1146,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
         "id": "kf-mIYkzPCr2"
       },
@@ -1204,8 +1205,8 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "T4",
-      "provenance": [],
-      "include_colab_link": true
+      "include_colab_link": true,
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3 (ipykernel)",
@@ -1222,7 +1223,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.18"
+      "version": "3.10.13"
     }
   },
   "nbformat": 4,
